--- a/test.html
+++ b/test.html
@@ -9,6 +9,6 @@
     <script src="./test.js"></script>
   </head>
   <body>
-    <div id="test">这是master分支的代码 这是dev分支的代码</div>
+    <div id="test">这是master分支的代码 这是dev分支的代码 第二次修改</div>
   </body>
 </html>
